# quantTrading

./: AppData.h  CMakeLists.txt  README.md  main.cpp  qml.qrc
Python/: shandian.py
global/: GSetting.cpp  GSetting.h  Logger.cpp  Logger.h
history/: BacktestEngine.cpp  BacktestEngine.h  CMakeLists.txt  HistoryDataManager.cpp  HistoryDataManager.h  KlineGenerator.cpp  KlineGenerator.h  Strategy.cpp  Strategy.h
indicators/: BollingerBands.cpp  BollingerBands.h  CMakeLists.txt  IndicatorBase.cpp  IndicatorBase.h  MACD.cpp  MACD.h  MovingAverage.cpp  MovingAverage.h  RSI.cpp  RSI.h
model/: BaseModel.cpp  BaseModel.h  CMakeLists.txt  HistoryDataModel.cpp  HistoryDataModel.h  MarketDataModel.cpp  MarketDataModel.h  MarketDataModelExample.cpp  RealtimeDataModel.cpp  RealtimeDataModel.h
online/: AppData.h  CMakeLists.txt  onlinemarket.cpp  onlinemarket.h  onlinemarket_A.cpp  onlinemarket_A.h  onlinemarket_okb.cpp  onlinemarket_okb.h
resource/qml/: main.qml
resource/qml/control/: BaseButton.qml  BaseLabel.qml  BaseRadioButton.qml  BaseTextArea.qml
resource/qml/window/: MarketDataChartView.qml  MarketDataPage.qml  MarketDataWindow.qml
trading/: BinanceTrader.cpp  BinanceTrader.h  CMakeLists.txt  EastMoneyTrader.h  EastMoneyTrading.cpp  EastMoneyTrading.h  OKXTrader.h  OKXTrading.cpp  OKXTrading.h  StrategyLoader.cpp  StrategyLoader.h  TradingEngine.cpp  TradingEngine.h
